# kinesis

./: .gitignore  CMakeLists.txt  main.c  main.cpp  run.bat
data/shaders/: basic.frag  basic.vert  point.frag
libs/glad/glad/: gl.h  wgl.h
src/: main.c  main.h  math_helper.c  math_helper.h  math_ops.c  math_ops.h  matrix.c  matrix.h  platform.h  rigidbody.h  shader.c  shader.h  vector.c  vector.h  win32_platform.c  win32_time.c  win32_time.h
